<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.me74.musicalstructure.Playlist1Activity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playlist1"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/cat_playlist_1_description" />

        <TextView
            android:id="@+id/song_1"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/song_1_name" />

        <TextView
            android:id="@+id/song_2"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/song_2_name" />

        <TextView
            android:id="@+id/song_3"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/song_3_name" />

        <TextView
            android:id="@+id/song_4"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/song_4_name" />

        <TextView
            android:id="@+id/song_5"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/song_5_name" />

    </LinearLayout>

</ScrollView>
