<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.me74.musicalstructure.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playlists"
            style="@style/CategoryStyle"
            android:background="@color/category_playlists"
            android:text="@string/category_playlists" />

        <TextView
            android:id="@+id/recently_played"
            style="@style/CategoryStyle"
            android:background="@color/category_recently_played"
            android:text="@string/category_recently_played" />

        <TextView
            android:id="@+id/artists"
            style="@style/CategoryStyle"
            android:background="@color/category_artists"
            android:text="@string/category_artists" />

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:background="@color/category_albums"
            android:text="@string/category_albums" />

        <TextView
            android:id="@+id/songs"
            style="@style/CategoryStyle"
            android:background="@color/category_songs"
            android:text="@string/category_songs" />

    </LinearLayout>

</ScrollView>